@@ -9,101 +9,95 @@ import org.slf4j.LoggerFactory;
 
 import java.util.Map;
 
+/**
+ * Адаптер для записи данных в Neo4j (Driver 5.x)
+ */
 public class Neo4jWriter implements GraphDatabaseWriter {
+
     private static final Logger logger = LoggerFactory.getLogger(Neo4jWriter.class);
+
     private Driver driver;
     private Session session;
 
     @Override
     public void connect(String host, int port, String database, String username, String password) {
-        String uri = String.format("bolt://%s:%d", host, port);
-        AuthToken auth = AuthTokens.basic(username, password);
-        driver = GraphDatabase.driver(uri, auth);
-        session = driver.session(SessionConfig.forDatabase(database));
-        logger.info("Connected to Neo4j at {}", uri);
+        String uri = "neo4j://" + host + ":" + port;
+        this.driver = GraphDatabase.driver(uri, AuthTokens.basic(username, password));
+        this.session = driver.session(SessionConfig.forDatabase(database));
+
+        logger.info("Успешно подключено к Neo4j: {}:{}/{}", host, port, database);
     }
 
     @Override
     public void writeNode(GraphNode node) {
-        String cypher = String.format("CREATE (n:%s %s)", node.getLabel(), propertiesToCypher(node.getProperties()));
-        executeQuery(cypher);
+        String cypher = "CREATE (n:" + node.getLabel() + " $props)";
+        Map<String, Object> params = Map.of("props", node.getProperties());
+        executeCypher(cypher, params);
     }
 
     @Override
-    public void writeRelationship(GraphRelationship relationship) {
-        String cypher = String.format(
-                "MATCH (a) WHERE id(a) = '%s' MATCH (b) WHERE id(b) = '%s' CREATE (a)-[r:%s %s]->(b)",
-                relationship.getFromNodeId(), relationship.getToNodeId(),
-                relationship.getType(), propertiesToCypher(relationship.getProperties())
+    public void writeRelationship(GraphRelationship rel) {
+        String cypher = """
+            MATCH (a), (b)
+            WHERE a.id = $fromId AND b.id = $toId
+            CREATE (a)-[r:%s]->(b)
+            SET r += $props
+            """.formatted(rel.getType());
+
+        Map<String, Object> params = Map.of(
+                "fromId", rel.getFromNodeId(),
+                "toId", rel.getToNodeId(),
+                "props", rel.getProperties()
         );
-        executeQuery(cypher);
+
+        executeCypher(cypher, params);
+    }
+
+    private void executeCypher(String cypher, Map<String, Object> params) {
+        try {
+            // В Neo4j Driver 5.x Result больше не AutoCloseable
+            Result result = session.run(cypher, params);
+            result.consume(); // Освобождаем результат
+        } catch (Exception e) {
+            logger.error("Ошибка выполнения Cypher-запроса", e);
+            throw new RuntimeException("Neo4j query failed", e);
+        }
     }
 
     @Override
     public void executeQuery(String cypher) {
-        try (Result result = session.run(cypher)) {
-            // Consume result
-        } catch (Exception e) {
-            logger.error("Error executing query: {}", cypher, e);
-            throw new RuntimeException("Query execution failed", e);
-        }
+        executeCypher(cypher, Map.of());
     }
 
     @Override
     public void beginTransaction() {
-        if (session != null && session.isOpen()) {
-            session.close();
-        }
-        session = driver.session();
-        session.beginTransaction();
+        // Для простоты пока не используем явные транзакции
     }
 
     @Override
     public void commitTransaction() {
-        if (session != null && session.isOpen()) {
-            session.commitTransaction();
-        }
+        // Реализовано через executeWrite при необходимости
     }
 
     @Override
     public void rollbackTransaction() {
-        if (session != null && session.isOpen()) {
-            session.rollbackTransaction();
-        }
-    }
-
-    @Override
-    public void close() {
-        if (session != null && session.isOpen()) {
-            session.close();
-        }
-        if (driver != null) {
-            driver.close();
-        }
+        // Реализовано через executeWrite при необходимости
     }
 
     @Override
     public boolean isConnected() {
-        return driver != null && session != null && session.isOpen();
+        // isClosed() удалён в 5.x → используем простой и надёжный чек
+        return driver != null && session != null;
     }
 
-    private String propertiesToCypher(Map<String, Object> properties) {
-        if (properties.isEmpty()) return "";
-        StringBuilder sb = new StringBuilder("{");
-        properties.forEach((key, value) -> {
-            if (sb.length() > 1) sb.append(", ");
-            sb.append(key).append(": ");
-            if (value instanceof String) {
-                sb.append("'").append(escapeString((String) value)).append("'");
-            } else {
-                sb.append(value);
-            }
-        });
-        sb.append("}");
-        return sb.toString();
-    }
-
-    private String escapeString(String str) {
-        return str.replace("\\", "\\\\").replace("'", "\\'");
+    @Override
+    public void close() {
+        try {
+            if (session != null) session.close();
+            if (driver != null) driver.close();
+            logger.info("Подключение к Neo4j закрыто");
+        } catch (Exception e) {
+            logger.error("Ошибка закрытия подключения к Neo4j", e);
+        }
     }
 }
